--- a/main.css
+++ b/main.css
@@ -5,6 +5,9 @@
 *:focus {
   outline: none;
 }
+::-webkit-scrollbar {
+  display: none;
+}
 html {
   padding: 0;
   margin: 0;
@@ -14,7 +17,7 @@ body {
   margin: 0;
 }
 button {
-  background: none;
+  display: none;
   heigth: 20px;
   width: 10px;
 }
@@ -26,24 +29,38 @@ button {
   height: 400px;
   width: 400px;
 }
+.text-dis_cont {
+  overflow-y: scroll;
+  height: 400px;
+}
 #text {
-  
+  opacity: 0;
+  -webkit-transition: 1s;
 }
 .input_cont {
-  height: 20px;
-  margin-top: 200px;
-  width: 100%;
+  position: absolute;
+  height: 25px;
+  width: 400px;
 }
-label {
+.input-prompt {
+  -webkit-animation-name: label;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-iteration-count: infinite;
   font-size: 22px;
 }
 #text_input {
+  position: absolute;
   font-size: 13px;
   border-bottom: 1px solid black;
   width: 350px;
   height: 20px;
   padding-left: 10px;
 }
-.input-prompt {
-  width: 20px;
+@-webkit-keyframes label {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
 }
